keruta/beta/keruta-admin.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keruta-beta-admin
  namespace: kigawa-net-keruta-beta
  labels:
    app: keruta-beta-admin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keruta-beta-admin
  template:
    metadata:
      name: keruta-beta-admin
      labels:
        app: keruta-beta-admin
    spec:
      containers:
        - name: keruta-beta-admin
          image: harbor.kigawa.net/library/keruta-admin:main-65d4c05ec9b30c70bc99248dd571fbec412466d6
          imagePullPolicy: IfNotPresent
          startupProbe:
            httpGet:
              port: 3000
              path: /
          livenessProbe:
            httpGet:
              path: /
              port: 3000
          ports:
            - containerPort: 3000
              protocol: TCP
      restartPolicy: Always
