keruta/beta/keruta-executor.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keruta-beta-executor
  namespace: kigawa-net-keruta-beta
  labels:
    app: keruta-beta-executor
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keruta-beta-executor
  template:
    metadata:
      name: keruta-beta-executor
      labels:
        app: keruta-beta-executor
    spec:
      serviceAccountName: keruta-beta-sa
      containers:
        - name: keruta-beta-executor
          image: harbor.kigawa.net/library/keruta-executor:main-0cd5d6eee0849faf3c5792bb0ae66dc188dddf48
          imagePullPolicy: IfNotPresent
          startupProbe:
            httpGet:
              port: 8081
              path: /actuator/health
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8081
          ports:
            - containerPort: 8081
              protocol: TCP
      restartPolicy: Always
