keruta/beta/keruta.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keruta
  namespace: kigawa-net-keruta-beta
  labels:
    app: keruta
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keruta
  template:
    metadata:
      name: keruta
      labels:
        app: keruta
    spec:
      serviceAccountName: keruta-sa
      containers:
        - name: keruta
          image: harbor.kigawa.net/library/keruta:main-52f9aef6392d69217f9ada4f739b20960a957fc1
          imagePullPolicy: IfNotPresent
          startupProbe:
            httpGet:
              port: 8080
              path: /api/v1/health
          livenessProbe:
            httpGet:
              path: /api/v1/health
              port: 8080
          ports:
            - containerPort: 8080
              protocol: TCP
      restartPolicy: Always
