keruta/beta/keruta-admin-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: keruta-beta-admin-svc
  namespace: kigawa-net-keruta-beta
spec:
  selector:
    app: keruta-beta-admin
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
  type: ClusterIP
