keruta/beta/mongodb-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb-svc
  namespace: kigawa-net-keruta-beta
  labels:
    app: mongodb-svc
spec:
  selector:
    app: mongodb
  ports:
    - port: 27017
      targetPort: 27017
      protocol: TCP
  type: ClusterIP
  clusterIP: None
